fix: fixed button alignment

--- a/src/components/layout/navbar/Navbar.module.css
+++ b/src/components/layout/navbar/Navbar.module.css
@@ -70,7 +70,7 @@
   }
 
   .mobile_links_button {
-    display: block;
+    display: flex;
   }
 
   .mobile_links {
